Fix for images that were being stretched

--- a/css/layouts.css
+++ b/css/layouts.css
@@ -52,6 +52,10 @@
 			text-decoration: underline;
 		}
 
+		.pmpro_testimonial__image {
+			flex-shrink: 0;
+		}
+
 		img {
 			border-radius: 50%;
 			height: 96px;
